# ridepy

./: .flake8  .gitignore  .gitlab-ci.yml  .gitmodules  .gitpod.Dockerfile  .gitpod.yml  .pre-commit-config.yaml  CMakeLists.txt  LICENSE  MANIFEST.in  README.md  README.rst  names.md  pyproject.toml  pytest.ini  requirements-dev.txt  requirements-doc.txt  requirements.txt  setup.cfg  setup.py  tox.ini
.github/: CODEOWNERS
.github/workflows/: build-doc.yml  build-pypi-sdist.yml  build-pypi-wheel.yml  build-pypi.yml  build-sdist.yml  build-wheel.yml  deploy-doc.yml  deploy-pypi.yml  deploy-testpypi.yml  docs-gh-pages.yml  joss-draft-pdf.yml  python-app.yml  python-testing.yml
doc/: analytics.rst  conf.py  contributing.rst  cython_data_structures.rst  cython_deepdive.rst  cython_dispatchers.rst  cython_intro.rst  cython_reference.rst  cython_spaces.rst  cython_vehicle_states.rst  cythonic_stuff.rst  data_structures.rst  dispatcher-guide.rst  dispatchers.rst  events.rst  extras.rst  fleet_state.rst  glossary.rst  howto.rst  index.rst  introduction.rst  issues.rst  notebooks.rst  overview.rst  reference.rst  request-generator-guide.rst  setup.rst  spaces.rst  support.rst  utils.rst  vehicle_state.rst
doc/howto/: index.rst  install-ridepy.rst  obtain-support.rst  release-ridepy.rst  report-an-issue.rst  write-a-dispatcher.rst
doc/joss/: paper.bib
doc/notebooks/: introduction.md  introduction.py  introduction_cython.md  introduction_cython.py  introduction_cython_graph.md  introduction_cython_graph.py  introduction_simulation_set.md  introduction_simulation_set.py
docs/: conf.py  cythonic_stuff.rst  data_structures.rst  events.rst  fleet_state.rst  index.rst  introduction.rst  overview.rst  reference.rst  utils.rst  vehicle_state.rst
examples/: minimalist_ridesharing_dispatcher.py
joss/: paper.bib  paper.md
notebooks/: introduction.py  introduction_cython.py  introduction_cython_graph.py  introduction_simulation_set.py  ortools.py  try_ortools_integration.py
ridepy/: CMakeLists.txt  __init__.py  __main__.py  cli.py  data_structures.py  events.py  fleet_state.py  vehicle_state.py
ridepy/cpp/: .gitignore  CMakeLists.txt  main.cxx  ridepy.dox
ridepy/cpp/ridepy/: abstractdispatcher.h  bruteforcetotaltraveltimeminimisingdispatcher.h  datastructures.h  dispatchers.h  euclidean2d.h  events.h  fleetstate.h  i2loc.h  insertionresult.h  internalrequest.h  r2loc.h  request.h  singlevehiclesolution.h  spaces.h  squaregrid.h  stop.h  timewindow.h  transportationrequest.h  transportspace.h  vehiclestate.h
ridepy/cpp/tests/: tests.cxx  tests.h
ridepy/data_structures_cython/: CMakeLists.txt  __init__.py  cdata_structures.h  cdata_structures.pxd  data_structures.pxd  data_structures.pyx
ridepy/extras/: io.py  io_utils.py  simulation_set.py  spaces.py
ridepy/fleet_state/: fleetstate.h
ridepy/util/: CMakeLists.txt  __init__.py  request_generators.py  spaces.py  testing_utils.py
ridepy/vehicle_state_cython/: __init__.py  cstuff.cpp  cstuff.h  cvehicle_state.h  (+3 more)
src/: CMakeLists.txt
test/: CMakeLists.txt  Makefile  benchmark_bruteforce_dispatcher.py  benchmark_cython_bruteforce_dispatcher.py  bla.py  conftest.py  cpp_integration_test.cxx  cpp_integration_test.h  mpi_futures_fleet_state_test.py  simulate_script.py  simulate_script_cython.py  simulate_script_cython_wompi.py  simulate_script_python.py  simulate_script_python_mpi.py  simulate_script_python_wompi.py  test_analytics.py  test_bruteforce_dispatcher.py  test_bruteforce_dispatcher_cython.py  test_cdata_structures.py  test_cython_bruteforce_dispatcher.py  test_extras.py  test_fleet_state.py  test_integration.py  test_minimal_passenger_travel_time_dispatcher.py  test_minimal_passenger_travel_time_dispatcher_cython.py  test_mpi_futures_fleet_state.py  test_ortools_optimization.py  test_pickling.py  test_request_generator.py  test_ridepooling_dispatcher_min_route_length.py  test_simple_ellipse_dispatcher.py  test_simulator.py  test_space.py  test_util.py  test_vehicle_state.py  test_zerodetour_dispatcher.py
thesimulator/: CMakeLists.txt  __init__.py  cdata_structures.pxd  cdata_structures.pyx  data_structures.py  events.py  fleet_state.py  simulator.py  utils.py  vehicle_state.py
thesimulator/cdata_structures/: CMakeLists.txt  __init__.py  cdata_structures.cpp  cdata_structures.h  cdata_structures.pxd  data_structures.pxd  data_structures.pyx
thesimulator/cvehicle_state/: CMakeLists.txt  __init__.py  cdata_structures.pxd  cdata_structures.pyx  cstuff.cpp  cstuff.h  cstuff.pxd  cvehicle_state.pyx  cvehisle_state.pyx  data_structures.pxd  data_structures.pyx  dispatcher.pyx  handedited_cvehicle_state.cpp  vehicle_state.pyx  vehicle_state.pyz  vstate.cpp  vstate.h  vstate.pxd  vstate.pyx
thesimulator/data_structures_cython/: __init__.py  cdata_structures.h  data_structures.pxd  data_structures.pyx
thesimulator/extras/: io.py  parameter_spaces.py  simulate.py  simulation_set.py  spaces.py
thesimulator/test/: simulator.py  test_simulator.py
thesimulator/util/: CMakeLists.txt  __init__.py  dispatchers.py  request_generators.py  spaces.py  testing_utils.py
thesimulator/util/analytics/: __init__.py  plotting.py
thesimulator/util/cdispatchers/: CMakeLists.txt  __init__.py  cdispatchers.cpp  cdispatchers.h  cdispatchers.pxd  cdispatchers_utils.cpp  cdispatchers_utils.h  dispatchers.pxd  dispatchers.pyx
thesimulator/util/convenience/: spaces.py
thesimulator/util/cspaces/: __init__.py  boost_graph_space.cpp  boost_graph_space.h  cspaces.cpp  cspaces.h  cspaces.pxd  cspaces.pyx  spaces.cpp  spaces.pxd  spaces.pyx
thesimulator/util/dispatchers/: __init__.py  helper_functions.py
thesimulator/util/dispatchers_cython/: __init__.py  cdispatchers.h  cdispatchers.pxd  cdispatchers_utils.h  dispatchers.pxd  dispatchers.pyx
thesimulator/util/spaces_cython/: CMakeLists.txt  boost_graph_space.cxx  boost_graph_space.h  cspaces.cpp  cspaces.cxx  cspaces.pxd  spaces.pxd  spaces.pyx
thesimulator/vehicle_state_cython/: cstuff.cpp  cstuff.h  vehicle_state.pyx
thesimulator/vehile_state_cython/: cstuff.h
(+74 files in other folders)
