[tool.poetry]
name = "thesimulator"
version = "0.1.0"
description = "Simulates a dispatching algorithm serving exogeneous transportation requests with a fleet of vehicles"
authors = ["Debsankha Manik <dmanik@gwdg.de>", "Felix Jung <jung@posteo.de>"]
packages = [
    {include = "thesimulator"},
]
license = "MIT"
readme="README.md"

[tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.19.1"
mpi4py = "^3.0.3"
scipy = "^1.5.2"
networkx = "^2.5"

[tool.poetry.dev-dependencies]
pytest = "^6.0.1"
black = "19.10b0"
ipython = "^7.16.1"
pdbpp = "^0.10.2"
pre-commit = "^2.7.1"
tabulate = "^0.8.7"

[build-system]
requires = ["poetry==1.0.10"]
build-backend = "poetry.masonry.api"

# NOTE: you have to use single-quoted strings in TOML for regular expressions.
# It's the equivalent of r-strings in Python.  Multiline strings are treated as
# verbose regular expressions by Black.  Use [ ] to denote a significant space
# character.
[tool.black]
line-length = 88
target-version = ['py38']
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''
