[build-system]
requires = ["setuptools", "wheel", "Cython==3.0a6"]
build-backend = "setuptools.build_meta"

[project]
name = "ridepy"
version = "2.1.2"
authors = [
    { name = "Felix Jung", email = "felix.jung@tu-dresden.de" },
    { name = "Debsankha Manik", email = "dmanik@debsankha.net" },
]
description = """
Simulates a dispatching algorithm serving exogenous transportation \
requests with a fleet of vehicles. Does not simulate the universe, unlike MATSim. \
Batteries are included."""
keywords = ["simulation", "ridepooling", "mobility", "transport", "physics"]
readme = "README.rst"
requires-python=">=3.9"
classifiers = [
    "Intended Audience :: Science/Research",
    "Development Status :: 5 - Production/Stable",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Cython",
    "Programming Language :: C++",
    "Operating System :: POSIX :: Linux",
    "Topic :: Scientific/Engineering :: Physics",
]
dependencies = [
    "decorator",
    "networkx",
    "numpy",
    "pandas < 2",
    "scipy",
    "tabulate",
    "notebook",
    "jupytext",
    "matplotlib",
    "cython==3.0a6",
    "loky",
    "typer",
    "pyarrow",
]

[project.optional-dependencies]
dev = [
    "black==24.1.1",
    "commitizen",
    "pdbpp",
    "pre-commit",
    "hypothesis",
    "pytest",
    "wheel",
    "tox",
    "psutil",
    "check-manifest",
    "twine",
    "build",
    "auditwheel",
]

doc = [
    "recommonmark",
    "sphinx<7",
    "sphinx-rtd-theme",
    "sphinxcontrib-napoleon",
    "sphinx-toggleprompt",
    "sphinx-autodoc-typehints",
]

[project.urls]
"Homepage" = "https://ridepy.org/"
"Documentation" = "https://ridepy.org/"
"Repository" = "https://github.com/PhysicsOfMobility/ridepy/"

[project.scripts]
ridepy = "ridepy.cli:app"

[tool.setuptools]
zip-safe = false
include-package-data = false
py-modules = []

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"*" = ["*.pyx", "*.pxd", "*.cxx", "*.h", "*.hpp"]

[tool.black]
line-length = 88
target-version = ['py39']
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | _deps
  | buck-out
  | build
  | dist
  | googletest
)/
'''

# NOTE: you have to use single-quoted strings in TOML for regular expressions.
# It's the equivalent of r-strings in Python.  Multiline strings are treated as
# verbose regular expressions by Black.  Use [ ] to denote a significant space
# character.
